# l2crypt

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/: l2crypt.py
